url and pdf as references